Sudoku solver giving all possible solutions.